Complete homepage redesign and add new pages

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -64,7 +64,7 @@
       {% endif %}
       {% if author.cnki_link %}
         <li><a href="{{ author.cnki_link }}" itemprop="sameAs" rel="nofollow noopener noreferrer me">
-      <img src="/images/CNKI.png" alt="CNKI" style="width: 1.14em; height: 1.14em; vertical-align: -0.125em;"> CNKI</a></li>
+      <img src="/images/CNKI.png" alt="CNKI" class="icon-pad-right" style="width: 1.25em; height: 1.25em; vertical-align: -0.125em;"> CNKI 中国知网</a></li>
       {% endif %}
       {% if author.scopus %}
         <li><a href="{{ author.scopus }}"><i class="ai ai-scopus ai-fw icon-pad-right"></i>Scopus</a></li>
